[gd_scene load_steps=9 format=3 uid="uid://dsv566w4evo8b"]

[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="1_242j4"]
[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_dup0t"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/ConditionNode.gd" id="3_vhhwe"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxpkc"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kiqyv"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.443137, 0.701961, 0.321569, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sipot"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0862745, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_v4ya3"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="ConditionNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 320.0
offset_bottom = 101.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_llmqa")
theme_override_styles/panel = SubResource("StyleBoxFlat_lxpkc")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_kiqyv")
title = "ConditionNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_dup0t")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("1_242j4")
slot/0/draw_stylebox = false
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = ExtResource("1_242j4")
slot/1/draw_stylebox = false
script = ExtResource("3_vhhwe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IfLabel" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
text = "If"

[node name="VariableLabel" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sipot")
text = "variable"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="OperatorLabel" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sipot")
text = "condition"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="ValueLabel" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sipot")
text = "value"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="ThenLabel" type="Label" parent="MarginContainer/HBox"]
layout_mode = 2
text = "then"

[node name="ElseContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ElseLabel" type="Label" parent="ElseContainer"]
layout_mode = 2
text = "Else"
